--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,9 @@
                 <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
                     <version>3.5.0.1254</version>
+                    <configuration>
+                        <executable>true</executable>
+                    </configuration>
             </plugin>
             <!-- end::plugin[] -->
             <!-- tag::unpack[] -->
