--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'com.palantir.docker'
 // end::plugin[]
 
 // This is used as the docker image prefix (org)
-group = 'springio'
+group = 'niyi37'
 
 bootJar {
     baseName = 'miniproject-odumosu-niyi'
@@ -51,7 +51,8 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web") 
+    compile("org.springframework.boot:spring-boot-starter-web")
+    complie("org.projectlombok:lombok:1.16.8")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
