--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'com.palantir.docker'
 // end::plugin[]
 
 // This is used as the docker image prefix (org)
-group = 'springio'
+group = 'niyi37'
 
 bootJar {
     baseName = 'miniproject-odumosu-niyi'
@@ -52,7 +52,21 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-    complie("org.projectlombok:lombok:1.16.8")
+    compileOnly 'org.projectlombok:lombok:1.18.2'
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
+configurations {
+    //other configurations if any...
+    newRelic
+}
+dependencies {
+    newRelic group: 'com.newrelic.agent.java', name: 'newrelic-agent', version: '3.47.1'
+}
+task copyNewRelic(type: Copy) {
+    from configurations.newRelic
+    into "${project.buildDir}/libs"
+    rename { it.substring(0, it.indexOf("-")) + it.substring(it.lastIndexOf("."), it.size()) }
+}
+
+assemble.dependsOn copyNewRelic
