--- a/newrelic.yml
+++ b/newrelic.yml
@@ -13,7 +13,7 @@ common: &default_settings
   # account. For example, if your license key is 12345 use this:
   # license_key: '12345'
   # The key binds your Agent's data to your account in the New Relic service.
-  license_key: '6a7a81add9d02071e008b668f79957904083fe0e'
+  license_key: '${NR_LICENSE_KEY}'
 
   # Agent Enabled
   # Use this setting to disable the agent instead of removing it from the startup command.
@@ -42,7 +42,7 @@ common: &default_settings
   # This provides a finer-grained performance breakdown for
   # web apps in New Relic.
   # Default is false.
-  enable_auto_app_naming: true
+  enable_auto_app_naming: false
 
   # Set to true to enable component-based transaction naming.
   # Set to false to use the URI of a web request as the name of the transaction.
@@ -286,15 +286,16 @@ common: &default_settings
 
 development:
   <<: *default_settings
-  app_name: Miniproject-odumosu-niyi (Development)
+  app_name: Miniproject-odumosu-niyi-dev
 
 test:
   <<: *default_settings
-  app_name: Miniproject-odumosu-niyi (Test)
+  app_name: Miniproject-odumosu-niyi-test
 
 production:
   <<: *default_settings
+  app_name: Miniproject-odumosu-niyi
 
 staging:
   <<: *default_settings
-  app_name: Miniproject-odumosu-niyi (Staging)
+  app_name: Miniproject-odumosu-niyi-qa
